--- a/index.html
+++ b/index.html
@@ -3,352 +3,292 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Menu Restaurant avec Catégories</title>
-<style>
-  body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin: 0;
-    background: #f7f7f7;
-    padding-bottom: 160px; /* reserve space for cart */
-  }
-  h1 {
-    text-align: center;
-    margin: 20px 0;
-    color: #333;
-  }
-  .category {
-    margin: 30px 15px 10px;
-  }
-  .category h2 {
-    margin: 10px 0;
-    font-size: 22px;
-    color: #555;
-    border-bottom: 2px solid #25D366;
-    padding-bottom: 6px;
-  }
-  .menu-grid {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 18px;
-    justify-content: center;
-  }
-  .card {
-    background: #fff;
-    border-radius: 15px;
-    width: 220px;
-    box-shadow: 0 6px 16px rgba(0,0,0,0.08);
-    text-align: center;
-    transition: transform 0.2s;
-  }
-  .card:hover {
-    transform: translateY(-4px);
-  }
-  .card img {
-    width: 100%;
-    height: 140px;
-    object-fit: cover;
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
-  }
-  .card h3 {
-    margin: 8px 0 4px;
-    font-size: 18px;
-    color: #222;
-  }
-  .card p {
-    margin: 4px 0;
-    color: #666;
-    font-size: 15px;
-  }
-  .quantity-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 8px 0 12px;
-    gap: 10px;
-  }
-  .quantity-container button {
-    width: 30px;
-    height: 30px;
-    border: none;
-    background: #25D366;
-    color: #fff;
-    border-radius: 50%;
-    cursor: pointer;
-    font-size: 18px;
-  }
-  .quantity-container input {
-    width: 48px;
-    text-align: center;
-    border-radius: 6px;
-    border: 1px solid #ccc;
-    padding: 6px;
-    font-size: 16px;
-  }
+<title>Menu Restaurant</title>
 
-  /* Panier rétractable en bas */
-  .cart-container {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    max-width: 650px;
-    margin: 0 auto;
-    width: 100%;
-    z-index: 999;
-  }
-  .cart-header {
-    background: #25D366;
-    color: white;
-    padding: 12px 15px;
-    font-size: 17px;
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
-    cursor: pointer;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  .cart-body {
-    max-height: 0;
-    overflow: hidden;
-    background: #fff;
-    transition: max-height 0.3s ease;
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
-    padding: 0 15px;
-  }
-  .cart-body.open {
-    max-height: 460px;
-    padding: 15px;
-  }
-  .cart-body h2 {
-    margin-top: 0;
-    font-size: 19px;
-    color: #333;
-  }
-  .whatsapp-btn {
-    margin-top: 10px;
-    padding: 12px;
-    background: #25D366;
-    color: white;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    width: 100%;
-    font-size: 16px;
-  }
-  .whatsapp-btn:hover {
-    background: #1ebe57;
-  }
-  label {
-    display: block;
-    margin-top: 10px;
-  }
-  #delivery-time {
-    width: 100%;
-    padding: 8px;
-    font-size: 14px;
-    margin-bottom: 10px;
-  }
-  .asap-container {
-    display: flex;
-    align-items: center;
-    gap: 8px;
-    margin-bottom: 10px;
-  }
+<style>
+html { scroll-behavior: smooth; }
+
+body {
+  font-family: 'Segoe UI', sans-serif;
+  margin: 0;
+  background: #f6f6f6;
+  padding-bottom: 170px;
+}
+
+/* ===== MENU CATEGORIES STICKY ===== */
+.category-nav {
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  background: white;
+  display: flex;
+  gap: 10px;
+  padding: 10px;
+  overflow-x: auto;
+  border-bottom: 1px solid #ddd;
+}
+
+.category-nav a {
+  flex: none;
+  padding: 8px 14px;
+  background: #eee;
+  border-radius: 20px;
+  text-decoration: none;
+  color: #333;
+  font-size: 14px;
+  white-space: nowrap;
+}
+
+.category-nav a:hover {
+  background: #25D366;
+  color: white;
+}
+
+/* ===== TITRES ===== */
+h1 {
+  text-align: center;
+  margin: 20px 0;
+}
+
+/* ===== CATEGORIES ===== */
+.category {
+  padding: 15px;
+}
+
+.category h2 {
+  margin-bottom: 10px;
+  border-left: 4px solid #25D366;
+  padding-left: 10px;
+}
+
+/* ===== CARTES MENU ===== */
+.menu-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+  gap: 15px;
+}
+
+.card {
+  background: white;
+  border-radius: 12px;
+  box-shadow: 0 6px 16px rgba(0,0,0,0.08);
+  overflow: hidden;
+  text-align: center;
+}
+
+.card img {
+  width: 100%;
+  height: 120px;
+  object-fit: cover;
+}
+
+.card h3 {
+  margin: 8px 0 4px;
+  font-size: 16px;
+}
+
+.card p {
+  margin: 0;
+  color: #666;
+}
+
+.quantity-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  padding: 10px;
+}
+
+.quantity-container button {
+  width: 28px;
+  height: 28px;
+  border-radius: 50%;
+  border: none;
+  background: #25D366;
+  color: white;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+.quantity-container input {
+  width: 40px;
+  text-align: center;
+  border-radius: 6px;
+  border: 1px solid #ccc;
+}
+
+/* ===== PANIER SLIDANT ===== */
+.cart-container {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  max-width: 600px;
+  margin: auto;
+  z-index: 2000;
+}
+
+.cart-header {
+  background: #25D366;
+  color: white;
+  padding: 12px;
+  display: flex;
+  justify-content: space-between;
+  cursor: pointer;
+  border-radius: 15px 15px 0 0;
+}
+
+.cart-body {
+  background: white;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height .3s ease;
+  padding: 0 15px;
+}
+
+.cart-body.open {
+  max-height: 450px;
+  padding: 15px;
+}
+
+.whatsapp-btn {
+  background: #25D366;
+  color: white;
+  border: none;
+  width: 100%;
+  padding: 12px;
+  border-radius: 8px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.asap {
+  display: flex;
+  gap: 8px;
+  align-items: center;
+  margin: 10px 0;
+}
 </style>
 </head>
+
 <body>
 
-<h1>🍽️ Notre Menu</h1>
+<h1>🍽️ Menu</h1>
 
-<!-- Catégorie Entrées -->
-<div class="category">
+<!-- ===== MENU CATEGORIES ===== -->
+<div class="category-nav">
+  <a href="#entrees">Entrées</a>
+  <a href="#plats">Plats</a>
+  <a href="#desserts">Desserts</a>
+</div>
+
+<!-- ===== ENTREES ===== -->
+<div class="category" id="entrees">
   <h2>Entrées</h2>
   <div class="menu-grid">
-    <div class="card" data-name="Bruschetta 🍅" data-price="6.50">
-      <img src="https://unsplash.it/220/140?food=5" alt="Bruschetta">
+    <div class="card" data-name="Bruschetta 🍅" data-price="6">
+      <img src="https://images.unsplash.com/photo-1604908177522-4028e69c5c68">
       <h3>Bruschetta</h3>
-      <p>6,50 €</p>
+      <p>6,00 €</p>
       <div class="quantity-container">
         <button class="minus">-</button>
-        <input type="number" min="0" value="0">
-        <button class="plus">+</button>
-      </div>
-    </div>
-    <div class="card" data-name="Soupe du jour 🍲" data-price="5.00">
-      <img src="https://unsplash.it/220/140?food=6" alt="Soupe du jour">
-      <h3>Soupe du jour</h3>
-      <p>5,00 €</p>
-      <div class="quantity-container">
-        <button class="minus">-</button>
-        <input type="number" min="0" value="0">
+        <input type="number" value="0" min="0">
         <button class="plus">+</button>
       </div>
     </div>
   </div>
 </div>
 
-<!-- Catégorie Plats -->
-<div class="category">
-  <h2>Plats principaux</h2>
+<!-- ===== PLATS ===== -->
+<div class="category" id="plats">
+  <h2>Plats</h2>
   <div class="menu-grid">
-    <div class="card" data-name="Pâtes à la bolognaise 🍝" data-price="11.50">
-      <img src="https://unsplash.it/220/140?food=7" alt="Pâtes à la bolognaise">
-      <h3>Pâtes à la bolognaise</h3>
-      <p>11,50 €</p>
-      <div class="quantity-container">
-        <button class="minus">-</button>
-        <input type="number" min="0" value="0">
-        <button class="plus">+</button>
-      </div>
-    </div>
-    <div class="card" data-name="Burger Gourmet 🍔" data-price="12.90">
-      <img src="https://unsplash.it/220/140?food=8" alt="Burger Gourmet">
+    <div class="card" data-name="Burger Gourmet 🍔" data-price="12.9">
+      <img src="https://images.unsplash.com/photo-1550547660-d9450f859349">
       <h3>Burger Gourmet</h3>
       <p>12,90 €</p>
       <div class="quantity-container">
         <button class="minus">-</button>
-        <input type="number" min="0" value="0">
+        <input type="number" value="0" min="0">
         <button class="plus">+</button>
       </div>
     </div>
   </div>
 </div>
 
-<!-- Catégorie Desserts -->
-<div class="category">
+<!-- ===== DESSERTS ===== -->
+<div class="category" id="desserts">
   <h2>Desserts</h2>
   <div class="menu-grid">
-    <div class="card" data-name="Tiramisu 🍰" data-price="6.00">
-      <img src="https://unsplash.it/220/140?food=9" alt="Tiramisu">
+    <div class="card" data-name="Tiramisu 🍰" data-price="6">
+      <img src="https://images.unsplash.com/photo-1578985545062-69928b1d9587">
       <h3>Tiramisu</h3>
       <p>6,00 €</p>
       <div class="quantity-container">
         <button class="minus">-</button>
-        <input type="number" min="0" value="0">
-        <button class="plus">+</button>
-      </div>
-    </div>
-    <div class="card" data-name="Crème brûlée 🍮" data-price="5.50">
-      <img src="https://unsplash.it/220/140?food=10" alt="Crème brûlée">
-      <h3>Crème brûlée</h3>
-      <p>5,50 €</p>
-      <div class="quantity-container">
-        <button class="minus">-</button>
-        <input type="number" min="0" value="0">
+        <input type="number" value="0" min="0">
         <button class="plus">+</button>
       </div>
     </div>
   </div>
 </div>
 
-<!-- Panier rétractable -->
+<!-- ===== PANIER ===== -->
 <div class="cart-container">
   <div class="cart-header" id="cart-toggle">
-    <span>🛒 Mon Panier</span>
-    <span id="toggle-arrow">⬆️</span>
+    🛒 Mon panier
+    <span id="arrow">⬆️</span>
   </div>
   <div class="cart-body" id="cart-body">
-    <h2>Récapitulatif</h2>
-    <div id="cart-items">Aucun article sélectionné</div>
+    <div id="cart-items">Aucun article</div>
     <p id="total"></p>
 
-    <div class="asap-container">
+    <div class="asap">
       <input type="checkbox" id="asap">
-      <label for="asap">Dès que possible ⏱️</label>
+      <label>Dès que possible ⏱️</label>
     </div>
-    <label for="delivery-time">Date et heure souhaitées 📅</label>
-    <input type="datetime-local" id="delivery-time">
 
-    <button class="whatsapp-btn" id="sendWhatsApp">Envoyer par WhatsApp 📲</button>
+    <input type="datetime-local" id="time" style="width:100%">
+
+    <button class="whatsapp-btn" id="send">Envoyer WhatsApp 📲</button>
   </div>
 </div>
 
 <script>
-// JavaScript pour gestion quantité + panier + WhatsApp
-
 const cards = document.querySelectorAll('.card');
-const cartItemsDiv = document.getElementById('cart-items');
+const cartItems = document.getElementById('cart-items');
 const totalDiv = document.getElementById('total');
-const whatsappBtn = document.getElementById('sendWhatsApp');
-const deliveryInput = document.getElementById('delivery-time');
-const asapCheckbox = document.getElementById('asap');
-
-const cartToggle = document.getElementById('cart-toggle');
-const cartBody = document.getElementById('cart-body');
-const toggleArrow = document.getElementById('toggle-arrow');
 
 function updateCart() {
-  let cartText = '';
+  let txt = '';
   let total = 0;
-  cards.forEach(card => {
-    const input = card.querySelector('input');
-    const qty = parseInt(input.value);
-    const name = card.dataset.name;
-    const price = parseFloat(card.dataset.price);
-    if (qty > 0) {
-      cartText += `${name} x${qty} - ${(price*qty).toFixed(2)} €\n`;
-      total += price * qty;
+  cards.forEach(c => {
+    const q = +c.querySelector('input').value;
+    const p = +c.dataset.price;
+    if (q > 0) {
+      txt += `• ${c.dataset.name} x${q} = ${(p*q).toFixed(2)}€\n`;
+      total += p*q;
     }
   });
-  cartItemsDiv.textContent = cartText || 'Aucun article sélectionné';
-  totalDiv.textContent = total ? `Total: ${total.toFixed(2)} €` : '';
+  cartItems.textContent = txt || 'Aucun article';
+  totalDiv.textContent = total ? `💰 Total: ${total.toFixed(2)} €` : '';
 }
 
-cards.forEach(card => {
-  const minus = card.querySelector('.minus');
-  const plus = card.querySelector('.plus');
-  const input = card.querySelector('input');
-
-  minus.addEventListener('click', () => {
-    if (input.value > 0) input.value--;
-    updateCart();
-  });
-  plus.addEventListener('click', () => {
-    input.value++;
-    updateCart();
-  });
-  input.addEventListener('input', updateCart);
+cards.forEach(c => {
+  c.querySelector('.plus').onclick = () => { c.querySelector('input').value++; updateCart(); };
+  c.querySelector('.minus').onclick = () => { if (c.querySelector('input').value > 0) c.querySelector('input').value--; updateCart(); };
 });
 
-asapCheckbox.addEventListener('change', () => {
-  deliveryInput.disabled = asapCheckbox.checked;
-});
+document.getElementById('cart-toggle').onclick = () => {
+  cart-body.classList.toggle('open');
+};
 
-cartToggle.addEventListener('click', () => {
-  cartBody.classList.toggle('open');
-  toggle-arrow.textContent = cartBody.classList.contains('open') ? '⬇️' : '⬆️';
-});
-
-function formatDateReadable(str) {
-  const d = new Date(str);
-  if (isNaN(d)) return '';
-  return d.toLocaleString('fr-FR', { weekday:'long', day:'numeric', month:'long', hour:'2-digit', minute:'2-digit' });
-}
-
-whatsappBtn.addEventListener('click', () => {
-  let message = '🛒 *Commande :*\n';
-  let total = 0;
-  cards.forEach(card => {
-    const qty = parseInt(card.querySelector('input').value);
-    const price = parseFloat(card.dataset.price);
-    if (qty > 0) {
-      message += `- ${card.dataset.name} x${qty} = ${(price*qty).toFixed(2)} €\n`;
-      total += price*qty;
-    }
-  });
-  if (total === 0) { alert('Ajoute au moins un article'); return; }
-  message += `💰 Total: ${total.toFixed(2)} €\n`;
-  if (asapCheckbox.checked) message += '⏱️ Dès que possible';
-  else if (deliveryInput.value) message += `📅 ${formatDateReadable(deliveryInput.value)}`;
-
-  const phoneNumber = '33612345678'; // remplace par ton numéro
-  window.open(`https://wa.me/${phoneNumber}?text=${encodeURIComponent(message)}`, '_blank');
-});
-
-updateCart();
+document.getElementById('send').onclick = () => {
+  if (!totalDiv.textContent) return alert('Ajoute des plats 😉');
+  const msg = `🛒 Commande\n${cartItems.textContent}\n${totalDiv.textContent}`;
+  window.open(`https://wa.me/33612345678?text=${encodeURIComponent(msg)}`);
+};
 </script>
 
 </body>
