--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 html { scroll-behavior: smooth; }
 
 body {
-  font-family: 'Segoe UI', sans-serif;
   margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
   background: #f6f6f6;
-  padding-bottom: 170px;
+  padding-bottom: 190px;
 }
 
-/* ===== MENU CATEGORIES STICKY ===== */
+/* ===== MENU CATEGORIES ===== */
 .category-nav {
   position: sticky;
   top: 0;
@@ -29,7 +29,6 @@ body {
 }
 
 .category-nav a {
-  flex: none;
   padding: 8px 14px;
   background: #eee;
   border-radius: 20px;
@@ -47,7 +46,7 @@ body {
 /* ===== TITRES ===== */
 h1 {
   text-align: center;
-  margin: 20px 0;
+  margin: 15px 0;
 }
 
 /* ===== CATEGORIES ===== */
@@ -56,12 +55,11 @@ h1 {
 }
 
 .category h2 {
-  margin-bottom: 10px;
   border-left: 4px solid #25D366;
   padding-left: 10px;
 }
 
-/* ===== CARTES MENU ===== */
+/* ===== CARTES ===== */
 .menu-grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
@@ -70,8 +68,8 @@ h1 {
 
 .card {
   background: white;
-  border-radius: 12px;
-  box-shadow: 0 6px 16px rgba(0,0,0,0.08);
+  border-radius: 14px;
+  box-shadow: 0 8px 18px rgba(0,0,0,0.08);
   overflow: hidden;
   text-align: center;
 }
@@ -84,7 +82,6 @@ h1 {
 
 .card h3 {
   margin: 8px 0 4px;
-  font-size: 16px;
 }
 
 .card p {
@@ -92,7 +89,7 @@ h1 {
   color: #666;
 }
 
-.quantity-container {
+.qty {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -100,25 +97,22 @@ h1 {
   padding: 10px;
 }
 
-.quantity-container button {
-  width: 28px;
-  height: 28px;
+.qty button {
+  width: 30px;
+  height: 30px;
   border-radius: 50%;
   border: none;
   background: #25D366;
   color: white;
   font-size: 18px;
-  cursor: pointer;
 }
 
-.quantity-container input {
+.qty input {
   width: 40px;
   text-align: center;
-  border-radius: 6px;
-  border: 1px solid #ccc;
 }
 
-/* ===== PANIER SLIDANT ===== */
+/* ===== PANIER ===== */
 .cart-container {
   position: fixed;
   bottom: 0;
@@ -132,41 +126,40 @@ h1 {
 .cart-header {
   background: #25D366;
   color: white;
-  padding: 12px;
+  padding: 14px;
   display: flex;
   justify-content: space-between;
   cursor: pointer;
-  border-radius: 15px 15px 0 0;
+  border-radius: 16px 16px 0 0;
 }
 
 .cart-body {
   background: white;
   max-height: 0;
   overflow: hidden;
-  transition: max-height .3s ease;
+  transition: max-height .35s ease;
   padding: 0 15px;
 }
 
 .cart-body.open {
-  max-height: 450px;
+  max-height: 500px;
   padding: 15px;
 }
 
 .whatsapp-btn {
+  width: 100%;
   background: #25D366;
   color: white;
   border: none;
-  width: 100%;
   padding: 12px;
-  border-radius: 8px;
+  border-radius: 10px;
   font-size: 16px;
-  cursor: pointer;
+  margin-top: 10px;
 }
 
 .asap {
   display: flex;
   gap: 8px;
-  align-items: center;
   margin: 10px 0;
 }
 </style>
@@ -176,14 +169,14 @@ h1 {
 
 <h1>🍽️ Menu</h1>
 
-<!-- ===== MENU CATEGORIES ===== -->
+<!-- CATEGORIES -->
 <div class="category-nav">
   <a href="#entrees">Entrées</a>
   <a href="#plats">Plats</a>
   <a href="#desserts">Desserts</a>
 </div>
 
-<!-- ===== ENTREES ===== -->
+<!-- ENTREES -->
 <div class="category" id="entrees">
   <h2>Entrées</h2>
   <div class="menu-grid">
@@ -191,8 +184,8 @@ h1 {
       <img src="https://images.unsplash.com/photo-1604908177522-4028e69c5c68">
       <h3>Bruschetta</h3>
       <p>6,00 €</p>
-      <div class="quantity-container">
-        <button class="minus">-</button>
+      <div class="qty">
+        <button class="minus">−</button>
         <input type="number" value="0" min="0">
         <button class="plus">+</button>
       </div>
@@ -200,7 +193,7 @@ h1 {
   </div>
 </div>
 
-<!-- ===== PLATS ===== -->
+<!-- PLATS -->
 <div class="category" id="plats">
   <h2>Plats</h2>
   <div class="menu-grid">
@@ -208,8 +201,8 @@ h1 {
       <img src="https://images.unsplash.com/photo-1550547660-d9450f859349">
       <h3>Burger Gourmet</h3>
       <p>12,90 €</p>
-      <div class="quantity-container">
-        <button class="minus">-</button>
+      <div class="qty">
+        <button class="minus">−</button>
         <input type="number" value="0" min="0">
         <button class="plus">+</button>
       </div>
@@ -217,7 +210,7 @@ h1 {
   </div>
 </div>
 
-<!-- ===== DESSERTS ===== -->
+<!-- DESSERTS -->
 <div class="category" id="desserts">
   <h2>Desserts</h2>
   <div class="menu-grid">
@@ -225,8 +218,8 @@ h1 {
       <img src="https://images.unsplash.com/photo-1578985545062-69928b1d9587">
       <h3>Tiramisu</h3>
       <p>6,00 €</p>
-      <div class="quantity-container">
-        <button class="minus">-</button>
+      <div class="qty">
+        <button class="minus">−</button>
         <input type="number" value="0" min="0">
         <button class="plus">+</button>
       </div>
@@ -234,22 +227,22 @@ h1 {
   </div>
 </div>
 
-<!-- ===== PANIER ===== -->
+<!-- PANIER -->
 <div class="cart-container">
   <div class="cart-header" id="cart-toggle">
     🛒 Mon panier
     <span id="arrow">⬆️</span>
   </div>
   <div class="cart-body" id="cart-body">
-    <div id="cart-items">Aucun article</div>
+    <pre id="cart-items">Aucun article</pre>
     <p id="total"></p>
 
     <div class="asap">
       <input type="checkbox" id="asap">
-      <label>Dès que possible ⏱️</label>
+      <label for="asap">Dès que possible ⏱️</label>
     </div>
 
-    <input type="datetime-local" id="time" style="width:100%">
+    <input type="datetime-local" id="datetime" style="width:100%">
 
     <button class="whatsapp-btn" id="send">Envoyer WhatsApp 📲</button>
   </div>
@@ -259,10 +252,14 @@ h1 {
 const cards = document.querySelectorAll('.card');
 const cartItems = document.getElementById('cart-items');
 const totalDiv = document.getElementById('total');
+const cartToggle = document.getElementById('cart-toggle');
+const cartBody = document.getElementById('cart-body');
+const arrow = document.getElementById('arrow');
 
 function updateCart() {
   let txt = '';
   let total = 0;
+
   cards.forEach(c => {
     const q = +c.querySelector('input').value;
     const p = +c.dataset.price;
@@ -271,23 +268,43 @@ function updateCart() {
       total += p*q;
     }
   });
+
   cartItems.textContent = txt || 'Aucun article';
-  totalDiv.textContent = total ? `💰 Total: ${total.toFixed(2)} €` : '';
+  totalDiv.textContent = total ? `💰 Total : ${total.toFixed(2)} €` : '';
+
+  if (total > 0) {
+    cartBody.classList.add('open');
+    arrow.textContent = '⬇️';
+  }
 }
 
 cards.forEach(c => {
   c.querySelector('.plus').onclick = () => { c.querySelector('input').value++; updateCart(); };
-  c.querySelector('.minus').onclick = () => { if (c.querySelector('input').value > 0) c.querySelector('input').value--; updateCart(); };
+  c.querySelector('.minus').onclick = () => {
+    if (c.querySelector('input').value > 0) {
+      c.querySelector('input').value--;
+      updateCart();
+    }
+  };
 });
 
-document.getElementById('cart-toggle').onclick = () => {
-  cart-body.classList.toggle('open');
+cartToggle.onclick = () => {
+  cartBody.classList.toggle('open');
+  arrow.textContent = cartBody.classList.contains('open') ? '⬇️' : '⬆️';
 };
 
 document.getElementById('send').onclick = () => {
-  if (!totalDiv.textContent) return alert('Ajoute des plats 😉');
-  const msg = `🛒 Commande\n${cartItems.textContent}\n${totalDiv.textContent}`;
-  window.open(`https://wa.me/33612345678?text=${encodeURIComponent(msg)}`);
+  if (!totalDiv.textContent) return alert('Ajoute au moins un plat 😉');
+
+  let message = `🛒 *Commande*\n\n${cartItems.textContent}\n${totalDiv.textContent}`;
+
+  if (document.getElementById('asap').checked) {
+    message += `\n⏱️ Dès que possible`;
+  } else if (datetime.value) {
+    message += `\n🕒 Pour : ${datetime.value.replace('T',' ')}`;
+  }
+
+  window.open(`https://wa.me/33612345678?text=${encodeURIComponent(message)}`);
 };
 </script>
 
